restored_build_verification.txt
[CLEAN] Removing old binaries...
[COPY] Copying shaders...
shaders\world.frag
shaders\world.vert
        2 file(s) copied.
[BUILD] Compiling Omnis Engine...
src/main.cpp:304:1: error: expected unqualified-id
  304 | if (ImGui::BeginTabItem("Rules")) {
      | ^
src/main.cpp:356:8: error: a type specifier is required for all declarations
  356 | ImGui::EndTabBar();
      |        ^
src/main.cpp:357:1: error: extraneous closing brace ('}')
  357 | }
      | ^
src/main.cpp:360:1: error: expected unqualified-id
  360 | if (prevTab == 0 && g_activeTab == 1) { // Left Architect -> Entering Sim
      | ^
src/main.cpp:364:1: error: expected unqualified-id
  364 | if (prevTab == 1 && g_activeTab != 1) { // Left Sim -> Pausing
      | ^
src/main.cpp:371:8: error: a type specifier is required for all declarations
  371 | ImGui::Separator();
      |        ^
src/main.cpp:372:8: error: a type specifier is required for all declarations
  372 | ImGui::TextColored(ImVec4(1.0f, 1.0f, 0.0f, 1.0f), "CELL INSPECTOR");
      |        ^
src/main.cpp:373:1: error: expected unqualified-id
  373 | if (g_hoveredIndex != -1 && g_hoveredIndex < (int)buffers.count) {
      | ^
src/main.cpp:381:3: error: expected unqualified-id
  381 | } else {
      |   ^
src/main.cpp:385:8: error: a type specifier is required for all declarations
  385 | ImGui::End();
      |        ^
src/main.cpp:386:1: error: extraneous closing brace ('}')
  386 | }
      | ^
11 errors generated.
[ERROR] Build failed. Check the logs above.
